test: check the current info storage in EDA

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2154,10 +2154,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 209,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 1000 entries, 0 to 999\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   fft_mean         1000 non-null   float64\n",
+      " 1   fft_std          1000 non-null   float64\n",
+      " 2   phase_mean       1000 non-null   float64\n",
+      " 3   phase_std        1000 non-null   float64\n",
+      " 4   peaks            1000 non-null   int64  \n",
+      " 5   ps_density_mean  1000 non-null   float64\n",
+      " 6   ps_density_std   1000 non-null   float64\n",
+      "dtypes: float64(6), int64(1)\n",
+      "memory usage: 62.5 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "labeled_freq_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 1000 entries, 0 to 999\n",
+      "Columns: 4000 entries, 0 to 3999\n",
+      "dtypes: float64(4000)\n",
+      "memory usage: 30.6 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "labeled_train_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "Index: 1000 entries, 0 to 999\n",
+      "Series name: target\n",
+      "Non-Null Count  Dtype\n",
+      "--------------  -----\n",
+      "1000 non-null   int64\n",
+      "dtypes: int64(1)\n",
+      "memory usage: 47.9 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "target.info()"
+   ]
   },
   {
    "cell_type": "code",
