refactor: merge several signal op functions in utils

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +884,7 @@
     }
    ],
    "source": [
-    "_, fft_result, phase = SignalOps.get_fft_components(sample_ill_signal.values)\n",
+    "_, fft_result, phase = SignalOps.fft_components(sample_ill_signal.values)\n",
     "fft_result, phase = pd.DataFrame(fft_result), pd.DataFrame(phase)\n",
     "fft_result.describe()"
    ]
@@ -978,15 +978,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "freq_df = pd.DataFrame()\n",
-    "freq_df['fft_mean'] = train_df.apply(lambda x: SignalOps.get_fft_components(x.values)[1].mean(), axis=1)\n",
-    "freq_df['fft_std'] = train_df.apply(lambda x: SignalOps.get_fft_components(x.values)[1].std(), axis=1)\n",
-    "freq_df['phase_mean'] = train_df.apply(lambda x: SignalOps.get_fft_components(x.values)[2].mean(), axis=1)\n",
-    "freq_df['phase_std'] = train_df.apply(lambda x: SignalOps.get_fft_components(x.values)[2].std(), axis=1)"
+    "freq_df['fft_mean'] = train_df.apply(lambda x: SignalOps.fft_components(x.values)[1].mean(), axis=1)\n",
+    "freq_df['fft_std'] = train_df.apply(lambda x: SignalOps.fft_components(x.values)[1].std(), axis=1)\n",
+    "freq_df['phase_mean'] = train_df.apply(lambda x: SignalOps.fft_components(x.values)[2].mean(), axis=1)\n",
+    "freq_df['phase_std'] = train_df.apply(lambda x: SignalOps.fft_components(x.values)[2].std(), axis=1)"
    ]
   },
   {
@@ -1817,8 +1817,8 @@
     "WINDOW = 200\n",
     "sample_healthy_signal = labeled_train_df.loc[500]\n",
     "sample_ill_signal = labeled_train_df.loc[0]\n",
-    "healthy_sample = (sample_healthy_signal, SignalFeatures.moving_average(sample_healthy_signal, window_length=WINDOW))\n",
-    "ill_sample = (sample_ill_signal, SignalFeatures.moving_average(sample_ill_signal, window_length=WINDOW))\n",
+    "healthy_sample = (sample_healthy_signal, SignalOps.moving_average(sample_healthy_signal, window_length=WINDOW))\n",
+    "ill_sample = (sample_ill_signal, SignalOps.moving_average(sample_ill_signal, window_length=WINDOW))\n",
     "SignalPlot.binary_class_differential_plot(healthy_sample, ill_sample, title='Original Signal vs Moving Average Signal', label1='Original Signal', label2='Moving Average Signal')\n"
    ]
   },
