--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2002,7 +2002,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "machinel",
+   "display_name": "pytorch",
    "language": "python",
    "name": "python3"
   },
@@ -2016,7 +2016,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
